# Shell

./: .gitignore  CMakeLists.txt  README.md  Shell.c  favs  favs.c  infPipes.c  misfavoritos.txt  pipe  pipes  shell  shell.c
nuevaCarpeta/: test.txt  testdos.txt
output/: Shell  comandos_favoritoseliminados.txt  favs
src/: Makefile  alarma.c  alarma.h  ejecutarComandos.c  ejecutarComandos.h  favs.c  favs.h  infPipes.c  main.c  message.txt  mi_programa  pipe  pipes  shell  shell.c  tokenEspacios.c  tokenEspacios.h  tokenPipes.c  tokenPipes.h  tokenespacios.c
